--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/app.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.3"
   }
 }
