--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.5.3"
+    "mongoose": "^6.5.3",
+    "yargs": "^17.5.1"
   }
 }
