--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.3",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.2",
     "yargs": "^17.5.1"
   }
 }
