3era entrega proyecto ecommerce

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PORT=8080
 MONGO_URL=mongodb+srv://santiagofalco:123asd@clustercursocoder.guulqh2.mongodb.net/atlasdb?retryWrites=true&w=majority
 PERSISTANCE=MONGO
+SMTP_USER= santiagofalco97@gmail.com
+SMTP_PASSWORD=bnsnjryxijxayvyu
