--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
+    "socket.io": "^4.5.3",
     "winston": "^3.8.2",
     "yargs": "^17.5.1"
   }
