--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test": "mocha src/index.test.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "mocha": "^10.1.0",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
@@ -21,6 +24,7 @@
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "socket.io": "^4.5.3",
+    "supertest": "^6.3.1",
     "winston": "^3.8.2",
     "yargs": "^17.5.1"
   }
