--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "pug": "^3.0.2",
     "socket.io": "^4.5.3",
     "supertest": "^6.3.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0",
     "winston": "^3.8.2",
     "yargs": "^17.5.1"
   }
